mi primera confirmación de actualización

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                     <p class="alertas" id="alertas" style="background-color: yellowgreen;"></p>
                   </form>
             </section>
+            <div class="greeting">
+                <p style="text-align: center;">DIV AGREGADO PARA EL PASO DE GITHUB</p>
+            </div>
         </main>
 
         <footer id="contacto">
